third_party/rust/chromium_crates_io/vendor/bitflags-1.3.2/tests/compile-fail/impls/eq.rs
use bitflags::bitflags;

bitflags! {
    #[derive(PartialEq, Eq)]
    struct Flags: u32 {
        const A = 0b00000001;
    }
}

fn main() {}
